dists = \
	redhat-70-i386 \
	redhat-71-i386 \
	redhat-72-i386 \
	redhat-73-i386 \
	redhat-80-i386 \
	redhat-9-i386 \
	fedora-1-i386 \
	fedora-2-i386 \
	fedora-3-i386 \
	fedora-development-i386 \
	cnc-9-i386 \
	suse-81-i386 \
	suse-82-i386 \
	suse-90-i386 \
	yellowdog-23-ppc \
	yellowdog-30-ppc \
	davedina

configdir = $(sysconfdir)/mach/dist.d
config_DATA = $(dists)

EXTRA_DIST = $(dists)

