dists = \
	redhat-70-i386 \
	redhat-71-i386 \
	redhat-72-i386 \
	redhat-73-i386 \
	redhat-80-i386 \
	redhat-9-i386 \
	fedora-1-i386 \
	fedora-2-i386 \
	fedora-3-i386 \
	fedora-3-x86_64 \
	fedora-4-i386 \
	fedora-4-x86_64 \
	fedora-4-ppc \
	fedora-5-i386 \
	fedora-5-x86_64 \
	fedora-5-ppc \
	fedora-6-i386 \
	fedora-6-x86_64 \
	fedora-6-ppc \
	fedora-7-i386 \
	fedora-7-x86_64 \
	fedora-7-ppc \
	fedora-8-i386 \
	fedora-8-x86_64 \
	fedora-8-ppc \
	fedora-9-i386 \
	fedora-9-x86_64 \
	fedora-9-ppc \
	fedora-10-i386 \
	fedora-10-x86_64 \
	fedora-10-ppc \
	fedora-11-i386 \
	fedora-11-x86_64 \
	fedora-11-ppc \
	fedora-development-i386 \
	fedora-development-x86_64 \
	fedora-development-ppc \
	centos-3-i386 \
	centos-3-x86_64 \
	centos-4-i386 \
	centos-4-x86_64 \
	centos-5-i386 \
	centos-5-x86_64 \
	suse-81-i386 \
	suse-82-i386 \
	suse-90-i386 \
	yellowdog-23-ppc \
	yellowdog-30-ppc \
	davedina

configdir = $(sysconfdir)/mach/dist.d
config_DATA = $(dists)

EXTRA_DIST = $(dists)

