dists = \
	redhat-70-i386 \
	redhat-71-i386 \
	redhat-72-i386 \
	redhat-73-i386 \
	redhat-80-i386 \
	redhat-9-i386 \
	fedora-1-i386 \
	fedora-2-i386 \
	fedora-3-i386 \
	fedora-3-x86_64 \
	fedora-4-i386 \
	fedora-4-x86_64 \
	fedora-4-ppc \
	fedora-5-i386 \
	fedora-5-x86_64 \
	fedora-5-ppc \
	fedora-6-i386 \
	fedora-6-x86_64 \
	fedora-6-ppc \
	fedora-7-i386 \
	fedora-7-x86_64 \
	fedora-7-ppc \
	fedora-8-i386 \
	fedora-8-x86_64 \
	fedora-8-ppc \
	fedora-9-i386 \
	fedora-9-x86_64 \
	fedora-9-ppc \
	fedora-10-i386 \
	fedora-10-x86_64 \
	fedora-10-ppc \
	fedora-11-i386 \
	fedora-11-x86_64 \
	fedora-11-ppc \
	fedora-12-i386 \
	fedora-12-x86_64 \
	fedora-12-ppc \
	fedora-13-i386 \
	fedora-13-x86_64 \
	fedora-13-ppc \
	fedora-14-i386 \
	fedora-14-x86_64 \
	fedora-14-ppc \
	fedora-15-i386 \
	fedora-15-x86_64 \
	fedora-15-ppc \
	fedora-16-i386 \
	fedora-16-x86_64 \
	fedora-16-ppc \
	fedora-17-i386 \
	fedora-17-x86_64 \
	fedora-17-ppc \
	fedora-18-i386 \
	fedora-18-x86_64 \
	fedora-18-ppc \
	fedora-19-i386 \
	fedora-19-x86_64 \
	fedora-19-ppc \
	fedora-20-i386 \
	fedora-20-x86_64 \
	fedora-20-ppc \
	fedora-development-i386 \
	fedora-development-x86_64 \
	fedora-development-ppc \
	centos-3-i386 \
	centos-3-x86_64 \
	centos-4-i386 \
	centos-4-x86_64 \
	centos-5-i386 \
	centos-5-x86_64 \
	centos-6-i386 \
	centos-6-x86_64 \
	suse-81-i386 \
	suse-82-i386 \
	suse-90-i386 \
	opensuse-102-i386 \
	opensuse-103-i386 \
	opensuse-110-i386 \
	yellowdog-23-ppc \
	yellowdog-30-ppc \
	davedina

configdir = $(sysconfdir)/mach/dist.d
config_DATA = $(dists)

EXTRA_DIST = $(dists)

